--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-2. Image Classification using CNN
-2_Image_Classification_using_CNN
+#Don't touch in the following line no. (2)
+2_Image_Classification_using_CNN    
