--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 #Don't touch in the following line no. (2)
-2_Image_Classification_using_CNN    
+2_Image_Classification/Datasets
+2_Image_Classification/train.zip
+2_Image_Classification/test.zip
